--- a/yolov8.yaml
+++ b/yolov8.yaml
@@ -11,9 +11,9 @@ nc: 11 # number of classes
 # l: [1.00, 1.00, 512] # YOLOv8l summary: 365 layers, 43691520 parameters, 43691504 gradients, 165.7 GFLOPs
 # x: [1.00, 1.25, 512] # YOLOv8x summary: 365 layers, 68229648 parameters, 68229632 gradients, 258.5 GFLOPs
 
-depth_multiple: 0.67
-width_multiple: 0.75
-max_channels: 768
+depth_multiple: 0.33
+width_multiple: 0.50
+max_channels: 1024
 # YOLOv8.0n backbone
 backbone:
   # [from, repeats, module, args]
@@ -42,8 +42,8 @@ head:
   - [[-1, 12], 1, Concat, [1]] # cat head P4
   - [-1, 3, C2f, [512]] # 18 (P4/16-medium) ->15
 
-#  - [-1, 1, Conv, [512, 3, 2]]
-#  - [[-1, 9], 1, Concat, [1]] # cat head P5
-#  - [-1, 3, C2f, [1024]] # 21 (P5/32-large)
+   - [-1, 1, Conv, [512, 3, 2]]
+   - [[-1, 9], 1, Concat, [1]] # cat head P5
+   - [-1, 3, C2f, [1024]] # 21 (P5/32-large) 
 
-  - [[15], 1, Detect, [nc]] # Detect(P3, P4, P5)
+  - [[15,18], 1, Detect, [nc]] # Detect(P3, P4, P5)
